added first page. it works through controller

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>NewsPortalSpring Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+
+	<properties>
+		<spring.version>4.3.5.RELEASE</spring.version>
+	</properties>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
@@ -58,8 +62,30 @@
 			<version>5.3.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.0.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.0.6.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 	<build>
-		<finalName>NewsPortalSpring</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version> <!-- or whatever current version -->
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
