added entity News, created NewsServiceImpl class, NewsService interface

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
 			<version>5.0.6.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.7.Final</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
